<resources>
    <string name="app_name">看片神器</string>
    <string name="freearea">免费</string>
    <string name="goldarea">黄金</string>
    <string name="diamondarea">钻石</string>
    <string name="blackdiamondarea">黑钻</string>
    <string name="royalarea">皇冠</string>d
    <string name="extremearea">至尊</string>d
    <string name="lifelongarea">终身</string>
    <string name="sexylivingarea">性感直播</string>
    <string name="privatearea">私房视频</string>
    <string name="bbsarea">狼友论坛</string>
    <string name="wode">我的</string>
    <string name="zhanghao">会员账号 :</string>
    <string name="test">134531235675687</string>
    <string name="touxian">头衔</string>
    <string name="tequan">特权</string>
    <string name="caozuo">操作</string>
    <string name="tiyantequan">观看体验电影</string>
    <string name="qudaohaoma">渠道号码 :</string>

    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取订单失败</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="et_input_money">请输入支付金额</string>
    <string name="et_input_order_des">订单描述如：精品玩具</string>
    <string name="submit_pay">提交支付</string>
    <string name="versions_check_ok">你的版本支持支付</string>
    <string name="versions_check_no">你的版本不支持支付</string>
    <string name="select_pay_type">你选择了</string>
    <string name="click_bt_submit">，点击按钮进行支付</string>
    <string name="greater_one">金额必须大于1分钱</string>

    <string name="no_token_id">订单号为空或位数不对，请检查输入的订单号！</string>
    <string name="new_token">或生成一个新的测试订单号</string>
    <string name="buy">去财付通支付</string>
    <string name="loading">正在生成token_id中..</string>
    <string name="order_query">订单查询</string>
    <string name="order_id">请输入订单号查询</string>

    <string name="action_pay">付款</string>
    <string name="action_stream">流水</string>
    <string name="action_count">统计</string>
    <string name="action_share">分享</string>
    <string name="getting_all_access">正在获取全部订单...</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="order_success">支付成功</string>
    <string name="action_cancel">你取消了支付</string>
    <string name="action_sourch_null">查询不到订单</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="shanghu">mch_id</string>
    <string name="shanghu2">7552000021</string>
    <string name="body1">body</string>
    <string name="body2">开通会员</string>
    <string name="type1">service</string>
    <string name="type2">unified.trade.pay</string>
    <string name="bb1">version</string>
    <string name="bb2">1.0</string>
    <string name="tz1">notify_url</string>
    <string name="tz2">http://php.qyjuju.com/json/pay/wft/</string>
    <string name="sjs">nonce_str</string>
    <string name="ddid">out_trade_no</string>
    <string name="jqip">mch_create_ip</string>
    <string name="jqip2">127.0.0.1</string>
    <string name="ttf">total_fee</string>
    <string name="ddif">device_info</string>
    <string name="xyk">limit_credit_pay</string>
    <string name="xyk2">0</string>
    <string name="qm">sign</string>
    <string name="wfurl">https://paya.swiftpass.cn/pay/gateway</string>
    <string name="vip">isVIP</string>
    <string name="gold">GoldVIP</string>
    <string name="diamond">DiamondVIP</string>
    <string name="blackdiamond">BlackDiamondVIP</string>
    <string name="exitpay">exit_pay</string>
    <string name="vipclose">VIPClose</string>
    <string name="gongxi">恭喜您成为VIP会员!</string>
    <string name="gongxivip">恭喜您成功购买视频!</string>
    <string name="czcg">充值成功</string>
    <string name="czcgvip">购买成功</string>
    <string name="numColumns">2</string>
    <string name="videoNumColumns">1</string>
</resources>
